# dojo-multiversx

./: .gitignore  LICENSE  README-en.md  README.md
solutions/: challenge1.md
solutions/week-01/: challenge1-en.md  challenge1.md
solutions/week-02/: challenge2-en.md  challenge2.md
solutions/week-03/: challenge3-en.md  challenge3.md
solutions/week-04/: challenge4-en.md  challenge4.md
src/chatbot/: package-lock.json  package.json  tsconfig.json
src/chatbot/public/: chat.html
src/chatbot/src/: bot.ts  index.ts  server.ts
src/crud_hyper/: Cargo.toml  LICENSE  README.md
src/crud_hyper/src/: data.rs  lib.rs  main.rs  manage_item.rs  server_hyper.rs
src/crud_hyper/tests/: integration_tests.rs
src/wasm-metastalkers/: Cargo.toml  factorial.wasm  factorial.wat  index.html  index.js
src/wasm-metastalkers/src/: lib.rs
