[package]
name = "crud_hyper"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with Stellar and Soroban networks."
license = "MIT"
repository = "https://github.com/robdicoco/dojo-stellar/tree/main/src/wallets/stellar_cli_wallet"
keywords = ["Hyper", "CRUD", "sample", "blockchain","MetaStalkers"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
authors = ["Rob DC <pavusa@gmail.com>"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
