[package]
name = "crud_hyper"
version = "0.1.0"
edition = "2021"
description = "A simple CRUD (Create, Read, Update, Delete) web application built using Rust's `hyper` library. This project demonstrates how to implement basic CRUD operations with an in-memory database and serves as a learning resource for Rust web development."
license = "MIT"
repository = "https://github.com/robdicoco/dojo-multiversx/src/crud_hyper"
keywords = ["hyper", "CRUD", "sample", "blockchain","MetaStalkers", "web", "api"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"
authors = ["Rob DC <pavusa@gmail.com>"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[badges]
maintenance = { status = "actively-developed" }
